Engadida funcionalidade de borrar perfiles

--- a/ProxyON/FRMPrincipal.resx
+++ b/ProxyON/FRMPrincipal.resx
@@ -900,6 +900,20 @@
         DSoYYBvAQ5UoAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="tsBtnCopiar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAG9SURBVDhPrZHLTsJQFEX5BBMSozFqEEQbiBhMTEz8A+Nj
+        5Gvm32gtF9AKtPJSAsPO+gXqjCl8BBNn0gdk23MDPq6gTepO1ux09Z6zQ5Rms4lGo4GHh0fU6nVUqlWU
+        y2Xo9/coVyqvqqpv8kG/IdlwOOQMxgyGaLVa6Ha70DTdk6r+pfQykjmOC9txYNsOLA8S9no9dDodFIrF
+        19H436E1SchlglBRFE42l8do/O/QzWhNEo1llm3Dsmz0PVx3AJbN+hdSAXSzsSxwSTRIQv4qj8AllTTN
+        +2DwsWLgkgrFElxPSDIicEl3dwV++H7fwptH4JJuVZUPkYwQS/oq61sWn1UyDBtstzZSfE/+5tYbcuGM
+        EEv6lNn8hySUrxUk9R0k2M5PKd2DVqC/0qBYEpF/1pB7Ikq4edFxmrmAZGxBMtOIs+3JLx1HLInWXDPS
+        WGsnJ7JqphBhW9OlYklEzEgh1pamsmImsMQ2JkvFkoiIkUSkHZ/KsilhgSX9lUQsGhIW29GJLJhxzLPE
+        9JXFki5lGUfX5ziUz3Agn2L/6gR7l8eYM2KYM6OYZeu/l+I3YT2GMIv/j4wyw6KCLBR6B/BZ5ScES/F+
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="tsBtnEliminar.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
